// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle button component it should render ToggleButton component correctly 1`] = `
"<Fragment>
  <button className={[undefined]} onClick={[Function: bound onToggleButton]}>
    More info
  </button>
</Fragment>"
`;

exports[`Toggle button component it should render inside test with Less 1`] = `
"<Fragment>
  <button className={[undefined]} onClick={[Function: bound onToggleButton]}>
    Less
  </button>
</Fragment>"
`;

exports[`Toggle button component it should render inside test with More 1`] = `
"<Fragment>
  <button className={[undefined]} onClick={[Function: bound onToggleButton]}>
    More info
  </button>
</Fragment>"
`;
